# app/Models/BugReport.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class BugReport extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'user_id',
+        'title',
+        'description',
+        'priority',
+        'status',
+        'device',
+        'device_os',
+        'browser',
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
